--- a/themes/ewh/sass/_chinese-pages.scss
+++ b/themes/ewh/sass/_chinese-pages.scss
@@ -33,7 +33,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 0 auto;
-  padding-top: 1rem;
+  padding-top: 4rem;
   @include tablet {
     padding-top: 0;
   }
