--- a/themes/ewh/sass/_emergency-contraception.scss
+++ b/themes/ewh/sass/_emergency-contraception.scss
@@ -2,6 +2,7 @@
   text-align: center;
   margin: 0 auto;
   width: 100%;
+  padding-top: 1rem;
   @include desktop{
   width: 70%;
   }
