--- a/themes/ewh/sass/_resources.scss
+++ b/themes/ewh/sass/_resources.scss
@@ -3,9 +3,12 @@
     font-size: 1rem;
     line-height: 20pt;
     text-align: center;
-    padding-top: 1rem;
+    padding-top: 3rem;
     width: 100%;
     margin: 0 auto;
+    @include tablet {
+        padding-top: 1rem;
+    }
     h1 {
         display: block;
         font-family: $font__header;
