--- a/themes/ewh/sass/_support-person.scss
+++ b/themes/ewh/sass/_support-person.scss
@@ -1,7 +1,10 @@
 .for-support-person-container {
   width: 95%;
   margin: 0 auto;
+  padding-top: 3rem;
+  @include tablet{
   padding-top: 1rem;
+  }
   h1{
     font-family: $font__header;
     font-size: 2.25rem;
